--- a/public/src/module/_new_child_tkt_form.scss
+++ b/public/src/module/_new_child_tkt_form.scss
@@ -77,7 +77,7 @@
         .options-wrapper {
             position: absolute;
             display: none;
-            @include left(-52px);
+            @include left(-40px);
             //top: -1px;
             margin-top: -10px;
             @include padding(0 0 0 14px);
