--- a/public/src/module/_new_ticket_form.scss
+++ b/public/src/module/_new_ticket_form.scss
@@ -654,7 +654,7 @@
         padding: 0px 12px 12px;
       }
       td.ticket-details{
-       width: 85%;
+       width: 80%;
        height: 50px;
        @include padding(10px 12px);
        h3{
